[project]
name = "inflammation"
version = "1.0.1"
description = "Analyse patient inflammation data"
authors = [
    {name = "BradleyMakinson"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (==2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)"
]
